--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/Footer.html}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/Header.html}"/>-->
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
+    <link href='https://fonts.googleapis.com/css?family=Alegreya Sans SC' rel='stylesheet'>
     <title>error</title>
 </head>
 <body>
-<div class="header" th:insert="Header"></div>
-<div class="error_message">Wystąpił nieoczekiwany błąd, przepraszamy!</div>
-<div class="footer" th:insert="Footer"></div>
+<div class="error_container">
+    <div class="header" th:insert="Header"></div>
+    <div class="error_message">Wystąpił nieoczekiwany błąd, przepraszamy!</div>
+    <div class="footer" th:insert="Footer"></div>
+</div>
 </body>
 </html>
